# adaptive-shield-assignment

./: README.md  pyproject.toml
project/: consumer.py  exceptions.py  main.py  scraper.py
