[tool.poetry]
name = "as- assignment"
version = "0.1.0"
description = ""
authors = ["adir abargil <adir1661@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
